# chat-system

./: README.md  check-deps.sh  how-to-run.txt  locust.py
central/: CMakeLists.txt  Dockerfile  central.cpp
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatRoom.tsx  LoadingSpinner.tsx  LoginForm.tsx  MessageBubble.tsx  MessageInput.tsx
frontend/src/hooks/: useMessages.ts  useRealTimeConnection.ts
frontend/src/services/: api.ts
k8s/: central-deployment.yaml  central-service.yaml  central-servicemonitor.yaml  front-deployment.yaml  front-service.yaml  redis.yaml  servera-deployment.yaml  servera-service.yaml  servera-servicemonitor.yaml  serverb-deployment.yaml  serverb-service.yaml  serverb-servicemonitor.yaml
serverA/: Dockerfile  package.json  server_a.js
serverB/: Dockerfile  chat.proto  requirements.txt  server_b.py
